# oculi-mundi

./: README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  game.py  input.py
src/core/: bullet.py  entity.py  eye.py  level.py  menu.py  spaceship.py
src/graphics_engine/: renderer.py  test.py  text_texture.py  texture.py  utils.py
src/graphics_engine/geometry/: geometry.py  parametric_geometry.py  polygon_geometry.py  rectangle_geometry.py
src/graphics_engine/light/: light.py
src/graphics_engine/materials/: basic_material.py  material.py  phong_material.py  surface_material.py  texture_material.py
src/graphics_engine/object3D/: camera.py  mesh.py  movement_rig.py  object3D.py  scene.py
src/graphics_engine/shaders/: phong_fragment.txt  phong_vertex.txt  point_fragment.txt
src/oculimundi/: __init__.py  game.py
src/oculimundi/core/: bullet.py  entity.py  eye.py  level.py  menu.py  spaceship.py
src/oculimundi/graphics_engine/: attribute.py  matrix.py  renderer.py  text_texture.py  uniform.py
src/oculimundi/graphics_engine/geometry/: geometry.py  parametric_geometry.py  polygon_geometry.py  rectangle_geometry.py
src/oculimundi/graphics_engine/light/: light.py
src/oculimundi/graphics_engine/materials/: basic_material.py  material.py  phong_material.py  surface_material.py  texture_material.py
src/oculimundi/graphics_engine/object3D/: __init__.py  camera.py  mesh.py  movement_rig.py  object3D.py  scene.py
src/oculimundi/graphics_engine/shaders/: point_vertex.txt  tex_fragment.txt  tex_vertex.txt
